# ticker-genius

./: .cursorrules  .env.example  .gitattributes  .gitignore  HANDOFF.md  README.md  pyproject.toml  pytest.ini  run_backtest.py  run_enrichment.py  run_verification.py
.claude/: settings.local.json
data/enriched/: ABBV_0f6cbdde2a91.json  ABBV_1f7158fe36a4.json  ABBV_2d5b1eceef0d.json  ABBV_493e66384751.json  ABBV_d366b49f6a64.json  ABEO_0bc9d35d95f0.json  ABEO_67009ed1efaa.json  ACAD_65b42af69c9b.json  ACAD_ea15774acbca.json  ACAD_f835522ac0db.json  ACER_470922086a46.json  ACER_a31584703c28.json  ACOG_1feea6e1263a.json  ADAP_4f801de57f04.json  ADMP_c154546794c9.json  AGIO_663ac566ba99.json  AGIO_79390e814bce.json  AGIO_8aae3f98661d.json  AGRX_c0ea5e5691e6.json  AIR_98974534d54f.json  AIR_a8aa5e882c47.json  AKBA_4a65456ecc96.json  AKBA_ce35d8546b99.json  ALDX_4ea94b84c6b7.json  ALDX_51c66edf0e18.json  ALDX_87e139eca962.json  ALKS_b0f5f7824871.json  ALNY_12dc859c0786.json  ALNY_2f92f8ec485f.json  ALNY_7ca07c352069.json  ALNY_8f1948aac047.json  ALVO_daa111296b85.json  ALXN_a6ba95b3b6a5.json  AMGN_6bb116d8d45e.json  AMGN_9bd59cd16d13.json  AMGN_aacbac5d2e9c.json  AMGN_b36f1f00f1e3.json  AMGN_c8dff8c1e93a.json  AMGN_e37220b13274.json  AMGN_ece255e9233f.json  (+483 more)
docs/: BACKTEST_REPORT.md  DATASET_ANALYSIS_2026_01_12.md  DATA_COLLECTION_DESIGN.md  DATA_GAP_ANALYSIS.md  DATA_QUALITY_REPORT.md  DESIGN_REVIEW.md  FDA_483_CDMO_COLLECTION_PLAN.md  FDA_DESIGNATION_COLLECTION_PLAN.md  IMPLEMENTATION_ROADMAP.md  LEGACY_CLEANUP_PLAN.md  M3_BLUEPRINT_v2.md  M3_BLUEPRINT_v3.md  M3_PLAN.md  M3_REVIEW.md  MANUFACTURING_COLLECTION_PLAN.md  PARALLEL_COLLECTION_ARCHITECTURE.md  PHASE1_ANALYSIS.md  PHASE2_ISSUE_PORTING.md  PHASE3_ARCHITECTURE.md  PHASE4_MIGRATION_PLAN.md  PHASE5_TOOL_ROADMAP.md  POSTMORTEM_001.md  SCHEMA_REDESIGN.md  SCHEMA_V2.md  SEARCH_IMPROVEMENT_DESIGN.md  STATUS.md
scripts/: backtest.py  collect_adcom.py  collect_cdmo_mapping.py  collect_fda_483.py  collect_fda_designations.py  collect_fda_wl_direct.py  collect_manufacturing_temporal.py  collect_nct.py  collect_small_gaps.py  collect_warning_letters.py  migrate_to_v3.py  migrate_v12_to_pipeline.py  recollect_designations.py  resume_enrichment.py  run_analysis.py  wave5_collect.py
scripts/_archive/: add_company_names.py  apply_adcom_batch1.py  apply_crl_reasons.py  apply_fda_batch10.py  apply_fda_batch11.py  apply_fda_batch12.py  apply_fda_batch13.py  apply_fda_batch14.py  (+57 more)
tests/: __init__.py  test_efts_live.py  test_schemas.py
(+81 files in other folders)
