[project]
name = "ticker-genius"
version = "4.0.0"
description = "MCP-based stock analysis tool with biotech focus"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Ticker-Genius Team"}
]
keywords = ["stock", "biotech", "pdufa", "fda", "mcp", "analysis"]

dependencies = [
    # Core MCP Framework
    "mcp>=1.0.0",

    # Data & Analysis
    "yfinance>=1.0.0",
    "pandas>=2.3.0",
    "numpy>=2.0.0",

    # Web Search
    "duckduckgo-search>=6.0.0",
    "requests>=2.31.0",

    # Visualization
    "matplotlib>=3.9.0",
    "mplfinance>=0.12.10b0",
    "plotly>=5.18.0",

    # PDF Reports
    "weasyprint>=60.0",
    "reportlab>=4.0.0",

    # Timezone
    "pytz>=2024.1",

    # Web Backend (TF 45차 동기화)
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",

    # ML (TF 45차 동기화)
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",

    # Real-time
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "websocket-client>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

telegram = [
    "python-telegram-bot>=20.0",
]

korean = [
    "pykrx>=1.0.0",
]

backtest = [
    "vectorbt>=0.26.0",
    "pandas-ta>=0.4.71b0",
]

trading = [
    "alpaca-py>=0.10.0",
]

scheduler = [
    "apscheduler>=3.10.0",
]

all = [
    "ticker-genius[dev,telegram,korean,backtest,trading,scheduler]",
]

[project.scripts]
ticker-genius = "server:main"

[project.urls]
Repository = "https://github.com/ticker-genius/ticker-genius"
Documentation = "https://github.com/ticker-genius/ticker-genius/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "modules", "tools", "reports", "data", "src/tickergenius"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
